// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-file creates api file content for operation with differently ordered parameters 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';
import { Body } from './openapi/model';

export const TestServiceApi = {
  getEntity: (args: {
    requiredQueryParam: number,
    requiredPathParam: number,
    body: Body,
    optionalQueryParam?: number
  }) => new OpenApiRequestBuilder<DefaultApi, 'getEntity'>(
    DefaultApi,
    'getEntity',
    args.requiredQueryParam,
    args.requiredPathParam,
    args.body,
    args.optionalQueryParam
  )
};"
`;

exports[`api-file creates api file content for operation with no parameters or request body 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';


export const TestServiceApi = {
  getEntity: () => new OpenApiRequestBuilder<DefaultApi, 'getEntity'>(
    DefaultApi,
    'getEntity'
  )
};"
`;

exports[`api-file creates api file content for operation with only  optional parameters 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';


export const TestServiceApi = {
  getEntity: (args?: {
    optionalQueryParam?: number
  }) => new OpenApiRequestBuilder<DefaultApi, 'getEntity'>(
    DefaultApi,
    'getEntity',
    args?.optionalQueryParam
  )
};"
`;

exports[`api-file creates api file content for operation with request body 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';
import { Body } from './openapi/model';

export const TestServiceApi = {
  createEntity: (args: {
    body: Body
  }) => new OpenApiRequestBuilder<DefaultApi, 'createEntity'>(
    DefaultApi,
    'createEntity',
    args.body
  ),
  updateEntity: (args: {
    id: string,
    body: Body
  }) => new OpenApiRequestBuilder<DefaultApi, 'updateEntity'>(
    DefaultApi,
    'updateEntity',
    args.id,
    args.body
  )
};"
`;

exports[`api-file creates api file content for operations with parameters and no request bodies 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';


export const TestServiceApi = {
  getEntity: (args: {
    id: string,
    limit?: number
  }) => new OpenApiRequestBuilder<DefaultApi, 'getEntity'>(
    DefaultApi,
    'getEntity',
    args.id,
    args.limit
  ),
  deleteEntity: (args: {
    id: string
  }) => new OpenApiRequestBuilder<DefaultApi, 'deleteEntity'>(
    DefaultApi,
    'deleteEntity',
    args.id
  )
};"
`;
